css fixes for better view on small displays

--- a/web/css/base-screen-480px.less
+++ b/web/css/base-screen-480px.less
@@ -1,5 +1,10 @@
+@contentSpacingSide: 0.1em;
+
 #env-dev:before {
 	content: "E";
+}
+#content-wrapper {
+	padding: 0 @contentSpacingSide;
 }
 p {
 	text-indent: 1.5em;
@@ -9,4 +14,8 @@ p {
 }
 .popover {
 	min-width: 25em;
+}
+.tab-content {
+	padding-left: 0.1em;
+	padding-right: 0.1em;
 }
