--- a/web/css/base-screen-800px.less
+++ b/web/css/base-screen-800px.less
@@ -123,3 +123,10 @@ ul.two-columns {
 .popover {
 	min-width: 35em;
 }
+.col-book {
+	padding-right: 0;
+}
+.booklist .book-media {
+	margin-top: 1.5em;
+	height: auto;
+}
